# rs-coinbase-pairs-handler

./: .gitignore  Cargo.toml  README.md
json_formatting/: WebSocket_JSON.md
src/: advanced_trade_rest_client.rs  advanced_trade_websocket.rs  config_builder.rs  main.rs  models.rs  rest_client.rs  sig_gen.rs  ticker_processing.rs  websocket.rs
