[package]
name = "rs-coinbase-pairs-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dotenv = "0.15.0"
hmac = "0.12.1"
hex = "0.4.3"
log = "0.4"
log4rs = { version="1.2.0", features=["background_rotation"] }
reqwest = { version="0.11.14", features=["json"] }
sha2 = "0.10.6"
serde = { version="1.0.152", features=["derive"] }
serde_json = "1.0.92"
tokio = { version="1.25.0", features=["full"] }
tungstenite = { version="0.18.0", features=["native-tls"] }
url = "2.3.1"